@@ -40,21 +40,13 @@ a:focus {
 	outline: medium none;
 }
 body > div.book,
-#main > div.book,
 body > div.article,
-#main > div.article,
 body > div.set,
-#main > div.set,
 body > div.preface,
-#main > div.preface,
 body > div.chapter,
-#main > div.chapter,
 body > div.section,
-#main > div.section,
 body > div.appendix,
-#main > div.appendix,
 body > div.part,
-#main > div.part,
 body > div.index {
 	margin-left: auto;
 	margin-right: auto;
@@ -1303,19 +1295,12 @@ body, section {
 */
 
 body > div.book,
-#main > div.book,
 body > div.article,
- #main > div.article,
 body > div.set,
-#main > div.set,
 body > div.preface,
-#main > div.preface,
 body > div.chapter,
-#main > div.chapter,
 body > div.section,
-#main > div.section,
 body > div.appendix,
-#main > div.appendix,
 body > div.part {
 	margin-top: 0px;
 /* breaks selection
@@ -1655,19 +1640,12 @@ body:hover #floatingtoc .toc:after {
 @media only screen and (max-width: 45em) {
 
 	body > div.book,
-	#main > div.book,
 	body > div.article,
-	#main > div.article,
 	body > div.set,
-	#main > div.set,
 	body > div.preface,
-	#main > div.preface,
 	body > div.chapter,
-	#main > div.chapter,
 	body > div.section,
-	#main > div.section,
 	body > div.appendix,
-	#main > div.appendix,
 	body > div.part {
 		padding:2em;
 	}
@@ -1696,32 +1674,18 @@ body.toc_embeded p#title {
 	margin-top: 55px;
 }
 
-body.draft > div.book:before,
-#main > div.book:before,
-body.draft > div.article:before,
-#main > div.article:before,
-body.draft > div.set:before,
-#main > div.set:before,
-body.draft > div.preface:before,
-#main > div.preface:before,
-body.draft > div.chapter:before,
-#main > div.chapter:before,
-body.draft > div.section:before,
-#main > div.section:before,
-body.draft > div.appendix:before,
-#main.draft > div.appendix:before,
-body.draft > div.part:before,
-#main > div.part:before,
-body.draft > div.index:before  {
-	position: fixed;
-	content: '';
+body.draft > div.book,
+body.draft > div.article,
+body.draft > div.set,
+body.draft > div.preface,
+body.draft > div.chapter,
+body.draft > div.section,
+body.draft > div.appendix,
+body.draft > div.part,
+body.draft > div.index  {
 	background-image: url(common/en-US/images/watermark-draft.png);
 	background-repeat: repeat-y;
 	background-position: center top;
-	width: 45em;
-	height: 100%;
-	top: 45px;
-	pointer-events: none;
 }
 
 .visible {
