@@ -1,5 +1,6 @@
 3.2.1 UNRELEASED
 - Fix empty images dir causing packaging fail. BZ #996349
+- Fix draft background being in front. BZ #996361
 
 3.2.0 Thu Aug 8 2013
 - Add spaces to web-spec.xsl to work around newer libxml2 eating white space in spec files  BZ #982424
